[tool.poetry]
name = "misquizi"
version = "0.1.0"
description = "Quiz application"
authors = ["EvgrafovAlexander <35798672+EvgrafovAlexander@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
