[tool.poetry]
name = "misquizi"
version = "0.1.0"
description = "Quiz application"
authors = ["EvgrafovAlexander <35798672+EvgrafovAlexander@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
gunicorn = "^22.0.0"
fastapi = "^0.111.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
