[tool.poetry]
name = "misquizi"
version = "0.1.0"
description = "Quiz application"
authors = ["EvgrafovAlexander <35798672+EvgrafovAlexander@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
gunicorn = "^22.0.0"
fastapi = "^0.111.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
